# wastewater-disease-prediction

./: .gitignore  .pre-commit-config.yaml  ADOPTERS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  EARLY_WARNING_PENALTY_SUMMARY.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  config.yaml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: CONTRIBUTOR_LADDER.md  OPEN_SOURCE_EXCELLENCE_FRAMEWORK.md  PROJECT_SCORECARD.md  RECRUITING_CONTRIBUTORS.md  SHOW_HN_DRAFT.md
notebooks/: 01_data_exploration.ipynb
reports/: confounding_analysis_quick_ref.txt  equity_simulation_output.txt  expert_panel_review.md  gap_trajectory_report.txt  health_equity_findings.md  urban_rural_confounding_summary.md  wastewater-disease-prediction-report.md
reports/equity_simulation/: EQUITY_ANALYSIS_SUMMARY.txt  EXECUTIVE_SUMMARY.md  POLICY_BRIEF.md  README.md
scripts/: fetch_flu_wastewater.py  fetch_nhsn_data.py  fetch_nwss_data.py
src/analysis/: burnin_duration.py  county_level_equity.py  early_warning_penalty.py  equity_simulation.py  equity_visualization.py  gap_trajectory.py  health_equity_ratios.py  natural_experiments.py  urban_rural_confounding.py
src/forecasting/: __init__.py  pipeline.py
src/models/: baseline.py  improved_forecaster.py  multi_pathogen.py
src/visualization/: __init__.py  backtest.py  dashboard.py  equity_simulation_viz.py
tests/: __init__.py  conftest.py  test_baseline.py  test_data_fetching.py  test_early_warning_penalty.py  test_equity_analysis.py  test_equity_simulation.py  test_forecasting_pipeline.py  test_improved_forecaster.py  test_multi_pathogen.py  test_pipeline.py
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/scripts/: build-data.py
web/src/: app.css  app.html
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/static/data/: counties.json  scenarios.json  state-aggregates.json  (+3 more)
(+21 files in other folders)
